--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,12 @@
+:root {
+    --background: #232946;
+    --headline: #fffff2;
+    --paragarph: #b8c1ec;
+    --btn: #eebbc3;
+    --btntxt: #232946;
+
+}
+
 .current {
     color: green;
 }
