--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,6 @@
+<head>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+</head>
 <nav>
     {% for item in site.data.navigation  %}
         <a href="{{item.link}}" {% if page.url == item.link %} class = "current" {% endif %}>
