--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,9 +2,16 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <nav>
-    {% for item in site.data.navigation  %}
-        <a href="{{item.link}}" {% if page.url == item.link %} class = "current" {% endif %}>
+    <div class="left">
+        <div class="logo">
+            
+        </div>
+    </div>
+    <div class="right">
+        {% for item in site.data.navigation %}
+        <a href="{{item.link}}" {% if page.url==item.link %} class="current" {% endif %}>
             {{item.name}}
         </a>
-    {% endfor %}
+        {% endfor %}
+    </div>
 </nav>
